; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mii/extr_lxtphy.c_lxtphy_set_fx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mii/extr_lxtphy.c_lxtphy_set_fx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_softc = type { i32 }

@MII_LXTPHY_CONFIG = common dso_local global i32 0, align 4
@CONFIG_100BASEFX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mii_softc*)* @lxtphy_set_fx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lxtphy_set_fx(%struct.mii_softc* %0) #0 {
  %2 = alloca %struct.mii_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.mii_softc* %0, %struct.mii_softc** %2, align 8
  %4 = load %struct.mii_softc*, %struct.mii_softc** %2, align 8
  %5 = load i32, i32* @MII_LXTPHY_CONFIG, align 4
  %6 = call i32 @PHY_READ(%struct.mii_softc* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @CONFIG_100BASEFX, align 4
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load %struct.mii_softc*, %struct.mii_softc** %2, align 8
  %11 = load i32, i32* @MII_LXTPHY_CONFIG, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @PHY_WRITE(%struct.mii_softc* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @PHY_READ(%struct.mii_softc*, i32) #1

declare dso_local i32 @PHY_WRITE(%struct.mii_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
